# rchem

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  .travis.yml  Cargo.toml  Containerfile  LICENSE  README.md  TODO.md  TODO.org  build.rs  renovate.json  requirements.txt  water.xyz
.github/: dependabot.yml  zizmor.yml
.github/workflows/: CI.yml  ci.yml  docker.yml  pre-commit.yml  test.yml  zizmor.yml
benches/: bench_rchem.rs
libpyquante2/: CMakeLists.txt  chgp.c  chgp.h  cints.c  cints.h
src/: basis.rs  integrals.rs  lib.rs  main.rs  pyquante.rs  shell.rs
src/integrals/: mod.rs  os86.rs  simint.rs  tho66.rs
