[package]
name = "rchem"
version = "0.1.0"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
approx = "0.5"
factorial = { git = "https://github.com/berquist/factorial", rev = "3b33d3e971f771b60f8151aae57db824600d9292" }
num-integer = "0.1"
# num-traits = "*"
arrayvec = "0.7"
GSL = "7.0"
cpython = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chemfiles = "0.10"
ndarray = "0.17"
ndarray-linalg = { version = "0.18", features = [ "netlib" ] }
boys = { version = "0.1", git = "https://github.com/berquist/boys" }

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"

[dev-dependencies]
criterion = "=0.7.0"

[[bench]]
name = "bench_rchem"
harness = false
